--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start  -p 3001",
     "lint": "eslint"
   },
   "dependencies": {
@@ -55,6 +55,7 @@
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
