--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,14 @@
 node_modules
 .next
+out
+.env
+.env.local
+.env.*.local
+*.log
+.DS_Store
 .git
 .gitignore
 README.md
-Dockerfile
-.dockerignore
-*.log
-bun.lock
-
+.vscode
+.idea
+tsconfig.tsbuildinfo
