--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@lexical/react": "^0.39.0",
+    "@lexical/utils": "^0.39.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -48,6 +50,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
+    "lexical": "^0.39.0",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
     "next": "16.0.4",
