--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.4",
     "lexical": "^0.39.0",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
